bugfix: 通过overflow: hidden;使父元素形成BFC，子元素的margin-bottom能作用在父元素上
- sula@1.0.0-beta.8

--- a/packages/sula/src/template-query-table/style/query-fields.less
+++ b/packages/sula/src/template-query-table/style/query-fields.less
@@ -5,6 +5,7 @@
     border-radius: 2px 2px 0 0;
     padding: 24px 24px 0 24px;
     background-color: @card-background;
+    overflow: hidden;
   }
 
   &-divider {
